--- a/medid.css
+++ b/medid.css
@@ -45,3 +45,9 @@ a {
 a:hover {
     color: pink;
 }
+
+@media only screen and (max-width: 100%) {
+    html {
+        max-width: fit-content;
+    }
+}
