--- a/medid.css
+++ b/medid.css
@@ -11,7 +11,30 @@ header, h2 {
     padding: 15px;
     width: 98%;
 }
+.pushable {
+    background: hsl(340deg 100% 32%);
+    border-radius: 10px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+  }
+.front {
+    display: block;
+    padding: 10px 30px;
+    border-radius: 12px;
+    font-size: 1rem;
+    background: hsl(345deg 100% 47%);
+    color: lightpink;
+    transform: translateY(-6px);
+  }
 
+.pushable:active .front {
+    transform: translateY(-2px);
+  }
+a {
+    text-decoration: none;
+    color: black;
 h1 {
     font-size: 2em;
 }
@@ -38,12 +61,6 @@ li {
 }
 .other-details {
     text-align: center;
-}
-a {
-    color: darkblue;
-}
-a:hover {
-    color: pink;
 }
 
 @media only screen and (max-width: 100%) {
