--- a/medid.css
+++ b/medid.css
@@ -35,6 +35,7 @@ header, h2 {
 a {
     text-decoration: none;
     color: black;
+}
 h1 {
     font-size: 2em;
 }
@@ -61,4 +62,9 @@ li {
 }
 .other-details {
     text-align: center;
+}
+@media only screen and (max-width: 700px) {
+    .textarea {
+        max-width: 100%;
+    }
 }
