--- a/medid.css
+++ b/medid.css
@@ -6,10 +6,11 @@ html {
     text-align: center;
 }
 
-header, h2 {
+header, h2, footer {
     background-color: rgb(255, 40, 40);
     padding: 15px;
-    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .pushable {
     background: hsl(340deg 100% 32%);
